cmake_minimum_required(VERSION 3.3)

project(ls1-standalone-generators LANGUAGES CXX VERSION 1.2.1)
set(AUTHOR "Martin Thomas Horsch")
set(AUTHOR_DETAILS "martin.horsch@stfc.ac.uk")
message(STATUS "cmake building ${PROJECT_NAME}")

add_subdirectory(animake)
add_subdirectory(mkcp)
add_subdirectory(mkesfera)
add_subdirectory(mktcts)

set(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "standalone external scenario generators for the MD code ls1 mardyn")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "2")
set(CPACK_PACKAGE_VERSION_PATCH "1")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "/usr/bin")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Martin Thomas Horsch")
set(CPACK_PACKAGE_EXECUTABLES mktcts)
include(CPack)
